[code] mobile responsive, bugs and links

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,48 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/gatto.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+
+    <title>The Wall – Social Experiment by Arunnats</title>
+    <meta
+      name="description"
+      content="The Wall is a social experiment created by Arunnats to see what people will pin on the wall. Visit arunnats.com for more."
+    />
+    <meta name="author" content="Arunnats" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://thewall.arunnats.com" />
+
+    <!-- Open Graph -->
+    <meta
+      property="og:title"
+      content="The Wall – Social Experiment by Arunnats"
+    />
+    <meta
+      property="og:description"
+      content="A social experiment to see what people will pin on the wall. Created by Arunnats. Learn more at arunnats.com."
+    />
+    <meta property="og:url" content="https://thewall.arunnats.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://arunnats.com/og-image.jpg" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="The Wall – Social Experiment by Arunnats"
+    />
+    <meta
+      name="twitter:description"
+      content="A social experiment to see what people will pin on the wall. Created by Arunnats. Learn more at arunnats.com."
+    />
+    <meta name="twitter:image" content="https://arunnats.com/og-image.jpg" />
+    <meta name="twitter:site" content="@arunnats" />
+
+    <!-- Robots -->
+    <meta name="robots" content="index, follow" />
   </head>
   <body>
     <div id="root"></div>
