[code] added pagination logic and also the filter logic

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,39 +5,24 @@
     <link rel="icon" type="image/svg+xml" href="/gatto.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>The Wall – Social Experiment by Arunnats</title>
-    <meta
-      name="description"
-      content="The Wall is a social experiment created by Arunnats to see what people will pin on the wall. Visit arunnats.com for more."
-    />
+    <title>The Wall</title>
+    <meta name="description" content="korch social, korch experiment" />
     <meta name="author" content="Arunnats" />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://thewall.arunnats.com" />
 
     <!-- Open Graph -->
-    <meta
-      property="og:title"
-      content="The Wall – Social Experiment by Arunnats"
-    />
-    <meta
-      property="og:description"
-      content="A social experiment to see what people will pin on the wall. Created by Arunnats. Learn more at arunnats.com."
-    />
+    <meta property="og:title" content="The Wall" />
+    <meta property="og:description" content="korch social, korch experiment" />
     <meta property="og:url" content="https://thewall.arunnats.com" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://arunnats.com/og-image.jpg" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="The Wall – Social Experiment by Arunnats"
-    />
-    <meta
-      name="twitter:description"
-      content="A social experiment to see what people will pin on the wall. Created by Arunnats. Learn more at arunnats.com."
-    />
+    <meta name="twitter:title" content="The Wall" />
+    <meta name="twitter:description" content="korch social, korch experiment" />
     <meta name="twitter:image" content="https://arunnats.com/og-image.jpg" />
     <meta name="twitter:site" content="@arunnats" />
 
